Change ViewController Interface

--- a/Udder/Base.lproj/Main.storyboard
+++ b/Udder/Base.lproj/Main.storyboard
@@ -21,20 +21,48 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53g-eE-qTa">
+                                <rect key="frame" x="102" y="413" width="210" height="70"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="UxM-Ma-FzQ" kind="show" id="SkC-q4-sw1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="53g-eE-qTa" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="5gp-zs-bTK"/>
                             <constraint firstItem="QtB-f3-VZS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="140" id="6uf-Gd-Nsl"/>
                             <constraint firstItem="QtB-f3-VZS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="109" id="70K-Xg-K8d"/>
                             <constraint firstItem="QtB-f3-VZS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GLk-7w-czK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QtB-f3-VZS" secondAttribute="bottom" constant="630" id="NMk-uX-M8k"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="53g-eE-qTa" secondAttribute="bottom" constant="379" id="aKB-wt-S05"/>
+                            <constraint firstItem="53g-eE-qTa" firstAttribute="centerX" secondItem="QtB-f3-VZS" secondAttribute="centerX" id="ead-kY-JnP"/>
+                            <constraint firstItem="53g-eE-qTa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="102" id="pSo-o5-UYW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="119"/>
+            <point key="canvasLocation" x="137.68115942028987" y="118.52678571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1VJ-oe-iwU">
+            <objects>
+                <viewController id="UxM-Ma-FzQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EjU-Z9-29E">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Fy0-xd-tgq"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="8W8-30-a4g"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eWa-Nw-iEI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="843" y="119"/>
         </scene>
     </scenes>
 </document>
